--- a/alamatPengiriman.html
+++ b/alamatPengiriman.html
@@ -78,8 +78,8 @@
     <div class="container py-5">
         <div class="row d-flex">
                 <div class="col align-self-center">
-                    <div class="card border border-primary">
-                        <div class="card-header text-center bg-primary text-white">
+                    <div class="card border border-primary" id="border">
+                        <div class="card-header text-center text-white" id="head">
                            <h4>Alamat Pengiriman</h4> 
                         </div>
                         <div class="card-body">
