Insyallah Dashboard Selesai :)

--- a/dashboard/daftarproduk.html
+++ b/dashboard/daftarproduk.html
@@ -61,7 +61,7 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Custom Components:</h6>
-                        <a class="collapse-item" href="daftarproduk.html">Daftar Produk</a>
+                        <a class="collapse-item" href="buttons.html">Daftar Produk</a>
                         <a class="collapse-item" href="cards.html">Daftar Pesanan</a>
                         <a class="collapse-item" href="cards.html">Halaman Admin</a>
                     </div>
@@ -195,59 +195,69 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <h1 class="h3 mb-4 text-gray-800">Selamat Datang, Admin!</h1>
+                    <h1 class="h3 mb-4 text-gray-800">Daftar Produk</h1>
                     <h3 class="Gadget For You"></h3>
                     <br>
                     <div class="row">
-                    <!-- Earnings (Monthly) Card Example -->
-                    <div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card border-left-primary shadow h-100 py-2">
-                                <div class="card-body">
-                                    <div class="row no-gutters align-items-center">
-                                        <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                                Daftar Produk</div>
-                                        </div>
-                                        <div class="col-auto">
-                                            <i class="fas fa-calendar fa-2x text-gray-300"></i>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card border-left-primary shadow h-100 py-2">
-                                <div class="card-body">
-                                    <div class="row no-gutters align-items-center">
-                                        <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                                Daftar Pesanan</div>
-                                        </div>
-                                        <div class="col-auto">
-                                            <i class="fas fa-calendar fa-2x text-gray-300"></i>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card border-left-primary shadow h-100 py-2">
-                                <div class="card-body">
-                                    <div class="row no-gutters align-items-center">
-                                        <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                                Halaman Admin</div>
-                                        </div>
-                                        <div class="col-auto">
-                                            <i class="fas fa-calendar fa-2x text-gray-300"></i>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            <div class="col-xl-3 col-md-6 mb-4">
+                            <a href="dataproduk.html" class="btn btn-primary">Tambah</a>
                         </div>
                     </div>
 
+                    <div class="row">
+                        <div class="col-md-12 col-sm-1">
+                        <table class="table align-middle table-bordered border-strong align-items-center table-secondary">
+                            <tr>
+                                <th>NO</th>
+                                <th>NAMA BARANG</th>
+                                <th>KATEGORI</th>
+                                <th>HARGA</th>
+                                <th>AKSI</th>
+                            </tr>
+
+                            <tr>
+                                <td>1</td>
+                                <td>ACER ASPIRE E5-476G-54U3</td>
+                                <td>LAPTOP</td>
+                                <td>RP. 6.434.000,00</td>
+                                <td><a href="dataproduk.html" class="btn btn-primary">UBAH</a> <br> <a href="" class="btn btn-light my-1">HAPUS</a></td>
+                            </tr>
+
+                            <tr>
+                                <td>2</td>
+                                <td>VIVO Y21 (2021) RAM 4GB ROM 64GB</td>
+                                <td>HP</td>
+                                <td>RP. 1.499.000,00</td>
+                                <td><a href="" class="btn btn-primary">UBAH</a> <br> <a href="" class="btn btn-light my-1">HAPUS</a></td>
+                            </tr>
+
+                            <tr>
+                                <td>3</td>
+                                <td>VIVO Y15S RAM 3GB ROM 32GB</td>
+                                <td>HP</td>
+                                <td>RP. 1.525.000,00</td>
+                                <td><a href="" class="btn btn-primary">UBAH</a> <br> <a href="" class="btn btn-light my-1">HAPUS</a></td>
+                            </tr>
+
+                            <tr>
+                                <td>4</td>
+                                <td>ASUS PC S500TC-0G6410002W/td>
+                                <td>PC</td>
+                                <td>RP. 8.399.000,00</td>
+                                <td><a href="" class="btn btn-primary">UBAH</a> <br> <a href="" class="btn btn-light my-1">HAPUS</a></td>
+                            </tr>
+
+                            <tr>
+                                <td>5</td>
+                                <td>ACER PC ATC 708 DUAL CORE G4400</td>
+                                <td>PC</td>
+                                <td>RP. 6.500.000,00</td>
+                                <td><a href="" class="btn btn-primary">UBAH</a> <br> <a href="" class="btn btn-light my-1">HAPUS</a></td>
+                            </tr>
+
+                            
+                        </table>
+                    </div>
                 </div>
                 <!-- /.container-fluid -->
 
