Gambar Ceklis Sudah Ke Tengah Ya:)

--- a/konfirmasi.html
+++ b/konfirmasi.html
@@ -74,32 +74,29 @@
         </div>
     </div>
 
-   <!-- Alamat Pengiriman -->
+   <!-- Konfirmasi Pembayaran -->
     <div class="container py-5">
-        <div class="row d-flex">
-                <div class="col align-self-center">
+        <div class="row d-flex justify-content-centerS">
+                <div class="col align-self-center align-items-center justify-content-center">
                     <div class="card border border-primary" id="border">
                         <div class="card-header text-center text-white" id="head">
                            <h4>Konfirmasi Pembayaran</h4> 
                         </div>
                         <div class="card-body">
-                            <div class="card-body">
+                            <div class="card-body align-items-center justify-content-center">
 
-                                <img src= "frontend/images/12.png" width="200px" style="display: block; border-radius: 50%; align:center; margin-right:30px"></td></tr>
+                                <img src="frontend/images/12.png" width="200px" class="rounded mx-auto d-block">
                 
                                 
-                                    <h1 class = "class" style="text-align:center;">Berhasil</h1> 
+                                    <h1 class = "class my-3" style="text-align:center;">Berhasil</h1> 
                                     <p style="font-size:110%;" class="text-center">Konfirmasi pembayaran telah dikirim melalui email www.farhan@gmail.com
                                     <br> 
                                     No. Invoice 2312 <br>
                                     Setelah dikonfirmasi,maka pesanan
                                     akan segera diproses.</p>
-                            <div class="d-flex justify-content-between">
-                                <div class="col d-flex">
-                                    <a href="pembayaran.html" class="btn btn-primary" id="tombol">Kembali</a>
-                                </div>
-                                <div class="col d-flex justify-content-end">
-                                    <a href="#" class="btn btn-primary" id="tombol">Selanjutnya</a>
+                            <div class="mt-5 d-flex justify-content-center">
+                                <div class="col d-flex justify-content-center">
+                                    <a href="index.html" class="btn btn-primary" id="tombol">Kembali Ke Home</a>
                                 </div>
                             </div>
                         </div>
