--- a/alamatPengiriman.html
+++ b/alamatPengiriman.html
@@ -114,7 +114,7 @@
                                     <a href="pembayaran.html" class="btn btn-primary" id="tombol">Kembali</a>
                                 </div>
                                 <div class="col d-flex justify-content-end">
-                                    <a href="#" class="btn btn-primary" id="tombol">Selanjutnya</a>
+                                    <a href="konfirmasi.html" class="btn btn-primary" id="tombol">Selanjutnya</a>
                                 </div>
                             </div>
                         </div>
